--- a/infra/ingress-nginx.yaml
+++ b/infra/ingress-nginx.yaml
@@ -14,6 +14,8 @@ spec:
     helm:
       releaseName: ingress-nginx
       parameters:
+        - name: "controller.ingressClassResource.default"
+          value: "true"
         - name: "controller.extraArgs.enable-ssl-passthrough"
           value: ""
         - name: "controller.allowSnippetAnnotations"
