--- a/infra/vault.yaml
+++ b/infra/vault.yaml
@@ -19,7 +19,7 @@ spec:
             enabled: true
             hosts:
               - host: vault.talos.prossertech.com
-                paths: /
+                paths: ["/"]
         ui: 
           enable: true
   destination:
