remove agent injector

--- a/infra/vault.yaml
+++ b/infra/vault.yaml
@@ -22,6 +22,8 @@ spec:
                 paths: ["/"]
         ui: 
           enable: true
+        injector:
+          enable: false
   destination:
     server: "https://kubernetes.default.svc"
     namespace: vault
