--- a/infra/cloudflared/public.yaml
+++ b/infra/cloudflared/public.yaml
@@ -21,7 +21,7 @@ data:
     - hostname: vault.prossertech.com
       service: http://vaultwarden-svc.vaultwarden.svc.cluster.local
     - hostname: atlantis.prossertech.com
-      service: http://atlantis.director.prossertech.com
+      service: http://10.10.10.207:30604
     - service: http_status:404
 ---
 apiVersion: apps/v1
