--- a/infra/ingress-nginx.yaml
+++ b/infra/ingress-nginx.yaml
@@ -13,17 +13,30 @@ spec:
     targetRevision: 4.10.1
     helm:
       releaseName: ingress-nginx
-      parameters:
-        - name: "controller.ingressClassResource.default"
-          value: "true"
-        - name: "controller.extraArgs.enable-ssl-passthrough"
-          value: ""
-        - name: "controller.allowSnippetAnnotations"
-          value: "true"
+      valuesObject:
+        controller:
+          ingressClassResources:
+            default: "true"
+          extraArgs:
+            enable-ssl-passthrough:
+          allowSnippetAnnotations: "true"
+        service:
+          annotations:
+            "lbipam.cilium.io/sharing-key": "1234"
+      # parameters:
+      #   - name: "controller.ingressClassResource.default"
+      #     value: "true"
+      #   - name: "controller.extraArgs.enable-ssl-passthrough"
+      #     value: ""
+      #   - name: "controller.allowSnippetAnnotations"
+      #     value: "true"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: ingress-nginx
   syncPolicy:
+    managedNamespaceMetadata:
+      annotations:
+        lbipam.cilium.io/sharing-cross-namespace: "*"
     syncOptions:
       - CreateNamespace=true
     automated:
