--- a/infra/vault.yaml
+++ b/infra/vault.yaml
@@ -18,7 +18,7 @@ spec:
           ingress:
             enabled: true
             hosts:
-              - host: vault.talos.prossertech.com
+              - host: vault.prod.prossertech.com
                 paths: ["/"]
         injector:
           enabled: false
