--- a/apps/slskd/deployment.yaml
+++ b/apps/slskd/deployment.yaml
@@ -88,7 +88,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: slskd.talos.prossertech.com
+  - host: slskd.prod.prossertech.com
     http:
       paths:
       - pathType: Prefix
