--- a/infra/rook-ceph/objectstore/s3ingress.yaml
+++ b/infra/rook-ceph/objectstore/s3ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-  - host: s3.talos.prossertech.com
+  - host: s3.prod.prossertech.com
     http:
       paths:
       - path: /
@@ -16,7 +16,7 @@ spec:
             name: rook-ceph-rgw-s3
             port:
               name: http
-  - host: "*.s3.talos.prossertech.com"
+  - host: "*.s3.prod.prossertech.com"
     http:
       paths:
       - path: /
