--- a/infra/cloudnativepg/test-cluster.yaml
+++ b/infra/cloudnativepg/test-cluster.yaml
@@ -11,3 +11,22 @@ spec:
 
   monitoring:
     enablePodMonitor: true
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cluster-example-rw
+  labels:
+    name: cluster-example-rw
+spec:
+  rules:
+  - host: pg.prod.prossertech.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: cluster-example-rw
+            port: 
+              number: 5432
