--- a/infra/cloudnativepg/test-cluster.yaml
+++ b/infra/cloudnativepg/test-cluster.yaml
@@ -19,6 +19,7 @@ metadata:
   labels:
     name: cluster-example-rw
 spec:
+  ingressClassName: nginx
   rules:
   - host: pg.prod.prossertech.com
     http:
