fix pooler deployment

--- a/infra/cloudnativepg/test-cluster.yaml
+++ b/infra/cloudnativepg/test-cluster.yaml
@@ -16,6 +16,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Pooler
 metadata:
   name: pooler-example-rw
+  namespace: default
 spec:
   cluster:
     name: cluster-example
