--- a/infra/cloudnativepg/test-cluster.yaml
+++ b/infra/cloudnativepg/test-cluster.yaml
@@ -27,6 +27,7 @@ spec:
       annotations:
         "io.cilium/lb-ipam-ips": "10.10.10.100"
         "lbipam.cilium.io/sharing-key": "1234"
+        "lbipam.cilium.io/sharing-cross-namespace": "*"
       labels:
         app: pooler
     spec:
