--- a/infra/ingress-nginx.yaml
+++ b/infra/ingress-nginx.yaml
@@ -24,6 +24,7 @@ spec:
             annotations:
               "io.cilium/lb-ipam-ips": "10.10.10.100"
               "lbipam.cilium.io/sharing-key": "1234"
+              "lbipam.cilium.io/sharing-cross-namespace": "*"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: ingress-nginx
