remove ip requests

--- a/infra/cloudnativepg/test-cluster.yaml
+++ b/infra/cloudnativepg/test-cluster.yaml
@@ -25,7 +25,7 @@ spec:
   serviceTemplate:
     metadata:
       annotations:
-        "io.cilium/lb-ipam-ips": "10.10.10.100"
+        # "io.cilium/lb-ipam-ips": "10.10.10.100"
         "lbipam.cilium.io/sharing-key": "1234"
         "lbipam.cilium.io/sharing-cross-namespace": "*"
       labels:
