--- a/infra/ingress-nginx.yaml
+++ b/infra/ingress-nginx.yaml
@@ -22,7 +22,7 @@ spec:
           allowSnippetAnnotations: "true"
           service:
             annotations:
-              "io.cilium/lb-ipam-ips": "10.10.10.100"
+              # "io.cilium/lb-ipam-ips": "10.10.10.100"
               "lbipam.cilium.io/sharing-key": "1234"
               "lbipam.cilium.io/sharing-cross-namespace": "*"
   destination:
