--- a/apps/gitea.yaml
+++ b/apps/gitea.yaml
@@ -16,6 +16,12 @@ spec:
     helm:
       releaseName: gitea
       valuesObject:
+        redis-cluster:
+          enabled: false
+        redis: 
+          enabled: true
+        postgresql-ha:
+          enabled: false
         gitea:
           config:
             database:
