--- a/apps/gitea.yaml
+++ b/apps/gitea.yaml
@@ -64,6 +64,9 @@ spec:
     server: "https://kubernetes.default.svc" 
     namespace: gitea
   syncPolicy:
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/enforce: privileged
     syncOptions:
       - CreateNamespace=true
     automated:
