--- a/apps/gitea/act-runner.yaml
+++ b/apps/gitea/act-runner.yaml
@@ -8,6 +8,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  storageClassName: rook-ceph-block
 ---
 apiVersion: apps/v1
 kind: Deployment
