add server side apply to rook-ceph

--- a/infra/rook-ceph.yaml
+++ b/infra/rook-ceph.yaml
@@ -17,6 +17,8 @@ spec:
     directory: 
       recurse: true
   syncPolicy:
+    syncOptions:
+      - ServerSideApply=true
     automated:
       prune: true
       selfHeal: true
