--- a/apps/gitlab.yaml
+++ b/apps/gitlab.yaml
@@ -21,6 +21,7 @@ spec:
         valuesObject:
           global:
             hosts:
+              https: false
               domain: git.prod.prossertech.com
               externalIP: 10.10.10.110
             psql: 
