--- a/apps/gitlab.yaml
+++ b/apps/gitlab.yaml
@@ -31,6 +31,8 @@ spec:
                 key: password
           postgresql:
             install: false
+          certmanager-issuer:
+            email: dprosser@prossertech.com
 
   destination:
     server: "https://kubernetes.default.svc" 
