fix ingress values

--- a/infra/ingress-nginx.yaml
+++ b/infra/ingress-nginx.yaml
@@ -15,7 +15,7 @@ spec:
       releaseName: ingress-nginx
       valuesObject:
         controller:
-          ingressClassResources:
+          ingressClassResource:
             default: "true"
           extraArgs:
             enable-ssl-passthrough: ""
