--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kube-prometheus-stack
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
