--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -47,7 +47,8 @@ spec:
         pod-security.kubernetes.io/enforce: privileged
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
+      # - ServerSideApply=true
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
