--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -49,6 +49,7 @@ spec:
       - CreateNamespace=true
       # - ServerSideApply=true
       - Replace=true
+      - Force=true
     automated:
       prune: true
       selfHeal: true
