--- a/infra/argocd/cm.yaml
+++ b/infra/argocd/cm.yaml
@@ -1,11 +1,20 @@
 apiVersion: v1
+data:
+  admin.enabled: "true"
+  application.instanceLabelKey: argocd.argoproj.io/instance
+  application.resourceTrackingMethod: annotation
+  exec.enabled: "false"
+  server.rbac.log.enforce.enable: "false"
+  statusbadge.enabled: "false"
+  timeout.hard.reconciliation: 0s
+  timeout.reconciliation: 180s
+  url: https://argocd.example.com
 kind: ConfigMap
 metadata:
-  name: argocd-cm
   annotations:
     meta.helm.sh/release-name: argo-cd
     meta.helm.sh/release-namespace: argocd
-  creationTimestamp: "2024-07-29T15:55:27Z"
+  creationTimestamp: "2024-08-05T16:25:29Z"
   labels:
     app.kubernetes.io/component: server
     app.kubernetes.io/instance: argo-cd
@@ -14,20 +23,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/version: v2.11.3
     helm.sh/chart: argo-cd-7.1.3
-data:
-  resource.exclusions: |
-    - apiGroups:
-      - cilium.io
-      kinds:
-      - CiliumIdentity
-      clusters:
-      - "*"
-  admin.enabled: "true"
-  application.instanceLabelKey: argocd.argoproj.io/instance
-  application.resourceTackingMethod: annotation
-  exec.enabled: "false"
-  server.rbac.log.enforce.enable: "false"
-  statusbadge.enabled: "false"
-  timeout.hard.reconciliation: 0s
-  timeout.reconciliation: 180s
-  url: https://argocd.storage.prossertech.com
+  name: argocd-cm
+  namespace: argocd
+  resourceVersion: "1448"
+  uid: f3862584-8448-4048-8796-a1710060dc1d
