--- a/infra/argocd/cm.yaml
+++ b/infra/argocd/cm.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   admin.enabled: "true"
   application.instanceLabelKey: argocd.argoproj.io/instance
-  application.resourceTrackingMethod: annotation
+  # application.resourceTrackingMethod: annotation
   exec.enabled: "false"
   server.rbac.log.enforce.enable: "false"
   statusbadge.enabled: "false"
