--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -50,6 +50,7 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+      - Validate=false
     automated:
       prune: true
       selfHeal: true
