remove etcd monitoring from kube-prometheus-stack

--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -16,6 +16,11 @@ spec:
     helm:
       releaseName: kube-prometheus-stack
       valuesObject:
+        defaultRules:
+          rules:
+            etcd: false
+        kubeEtcd: 
+          enabled: false
         alertmanager:
           ingress:
             enabled: true
