--- a/apps/gitea.yaml
+++ b/apps/gitea.yaml
@@ -14,6 +14,16 @@ spec:
     helm:
       releaseName: gitea
       valuesObject:
+        ingress:
+          enabled: true
+          annotations:
+            lbipam.cilium.io/sharing-cross-namespace: "*"
+            io.cilium/lb-ipam-ips: "10.10.10.100"
+            lbipam.cilium.io/sharing-key: "1234"
+          hosts:
+          - host: git.prod.prossertech.com
+            paths:
+            - path: /
         service:
           ssh:
             annotations:
