--- a/infra/cloudflared/public.yaml
+++ b/infra/cloudflared/public.yaml
@@ -16,6 +16,8 @@ data:
     ingress:
     - hostname: prossertech.com
       service: http://prossertech-svc.prossertech.svc.cluster.local
+    - hostname: git.prossertech.com 
+      service: http://gitea-http.gitea.svc.cluster.local
     - service: http_status:404
 ---
 apiVersion: apps/v1
