--- a/infra/cloudflared/public.yaml
+++ b/infra/cloudflared/public.yaml
@@ -17,7 +17,7 @@ data:
     - hostname: prossertech.com
       service: http://prossertech-svc.prossertech.svc.cluster.local
     - hostname: git.prossertech.com 
-      service: http://gitea-http.gitea.svc.cluster.local
+      service: http://gitea-http.gitea.svc.cluster.local:3000
     - service: http_status:404
 ---
 apiVersion: apps/v1
