change tunnel name

--- a/infra/cloudflared/public.yaml
+++ b/infra/cloudflared/public.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cloudflared
 data:
   config.yaml: |
-    tunnel: talos
+    tunnel: prod
     credentials-file: /etc/cloudflared/creds/credentials.json
     metrics: 0.0.0.0:2000
     no-autoupdate: true
