--- a/apps/gitea.yaml
+++ b/apps/gitea.yaml
@@ -7,8 +7,11 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
-  source:
-    chart: gitea
+  sources:
+  - repoURL: https://github.com/drewjprosser/argo-prod.git
+    path: apps/gitea
+    targetRevision: HEAD
+  - chart: gitea
     repoURL: https://dl.gitea.com/charts/
     targetRevision: 10.4.0
     helm:
