--- a/apps/gitea/rootless-docker-runner.yaml
+++ b/apps/gitea/rootless-docker-runner.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: standard
+  storageClassName: rook-ceph-block
 ---
 apiVersion: apps/v1
 kind: Deployment
