--- a/apps/gitea/docker-runner.yaml
+++ b/apps/gitea/docker-runner.yaml
@@ -30,15 +30,16 @@ spec:
     spec:
       restartPolicy: Always
       volumes:
-      - name: docker-certs
-        emptyDir: {}
       - name: runner-data
         persistentVolumeClaim:
           claimName: act-runner-vol
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: runner
-        image: gitea/act_runner:nightly
-        command: ["sh", "-c", "while ! nc -z localhost 2376 </dev/null; do echo 'waiting for docker daemon...'; sleep 5; done; /sbin/tini -- /opt/act/run.sh"]
+        image: gitea/act_runner:nightly-dind-rootless
+        imagePullPolicy: Always
+        # command: ["sh", "-c", "while ! nc -z localhost 2376 </dev/null; do echo 'waiting for docker daemon...'; sleep 5; done; /sbin/tini -- /opt/act/run.sh"]
         env:
         - name: DOCKER_HOST
           value: tcp://localhost:2376
@@ -53,18 +54,9 @@ spec:
             secretKeyRef:
               name: runner-secret
               key: token
-        volumeMounts:
-        - name: docker-certs
-          mountPath: /certs
-        - name: runner-data
-          mountPath: /data
-      - name: daemon
-        image: docker:23.0.6-dind
-        env:
-        - name: DOCKER_TLS_CERTDIR
-          value: /certs
         securityContext:
           privileged: true
         volumeMounts:
-        - name: docker-certs
-          mountPath: /certs
+        - name: runner-data
+          mountPath: /data
+
