--- a/apps/gitea/docker-runner.yaml
+++ b/apps/gitea/docker-runner.yaml
@@ -37,7 +37,7 @@ spec:
           claimName: act-runner-vol
       containers:
       - name: runner
-        image: gitea/act_runner:stable
+        image: gitea/act_runner:v0.2.10
         command: ["sh", "-c", "while ! nc -z localhost 2376 </dev/null; do echo 'waiting for docker daemon...'; sleep 5; done; /sbin/tini -- /opt/act/run.sh"]
         env:
         - name: DOCKER_HOST
