--- a/infra/cloudflared/public.yaml
+++ b/infra/cloudflared/public.yaml
@@ -18,8 +18,8 @@ data:
       service: http://prossertech-svc.prossertech.svc.cluster.local
     - hostname: git.prossertech.com 
       service: http://gitea-http.gitea.svc.cluster.local:3000
-    #- hostname: guacamole.prossertech.com
-    #  service: https://10.10.10.150:8443/
+    - hostname: guacamole.prossertech.com
+      service: http://10.10.10.150:8081/
     - service: http_status:404
 ---
 apiVersion: apps/v1
